fix: buttons width and text align in small devices

--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -82,6 +82,7 @@
 
   .experienceItemContent p {
     font-size: 0.95rem;
+    text-align: justify;
   }
 }
 
